--- a/public/style.css
+++ b/public/style.css
@@ -21,27 +21,30 @@ div.heading-container h1 {
 	color: #fff;		
 }
 
-div.book-container {
-	width: 80%;
-	margin: 5rem auto;
+div.bookstore {
 	display: flex;
-	justify-content: space-around;	
+	justify-content: space-around;
 }
-
-div.book-info {
-	width: 50%;
+div.book-container {
+	margin-top: 3rem;
+	width: 25%;	
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	align-items: center;
 }
-
-div.book-info h1 {
+div.book-container img {
+	width: 200px;
+	height: 300px;
+	margin-bottom: 1rem;
+}	
+div.book-container h1 {
 	margin-bottom: 2rem;
-	font-size: 2rem;
+	font-size: 1.5rem;
 	text-align: center;
 }
 
-div.book-info button {
+div.book-container button {
 	margin-top: 1.5rem;
 	padding: 5px 10px;
 	border: none;
@@ -52,7 +55,7 @@ div.book-info button {
 	cursor: pointer;
 }
 
-div.book-info button:hover {
+div.book-container button:hover {
 	background-color: #ccc;
 }
 
