fixed the url for keroku

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,7 +53,7 @@
 		//redirect to checkout 
 		//with session ID, register the transaction in stripe		
 		
-		fetch('http://localhost:5000/charge', {
+		fetch('https://enigmatic-castle-40813.herokuapp.com/charge', {
 			method: 'POST',
 			headers: {
 				'Content-Type': 'application/json'
